# LogosQ

./: .gitignore  Cargo.toml  Contributing.md  DevGuide.md  LICENSE  README.md
.github/workflows/: rust.yml
benches/: performance.rs
docs/: api.md
examples/: basic_gates.rs  gradient_bugs.rs  grover_algorithm.rs  qlstm_demo.rs  quantum_fourier_transform.rs  quantum_teleportation.rs  state_vis.rs  visualization.rs  vqe_h2.rs  xyz_h.rs  xyz_heisenberg.rs
scripts/: test.sh
src/: error.rs  lib.rs  prelude.rs
src/algorithms/: cobra.rs  mod.rs  qft.rs  rqc.rs  xyz_heisenberg.rs
src/algorithms/qftkernels/: common.rs  dit.rs  mod.rs
src/circuits/: mod.rs  parameterized.rs  single_qubit.rs  three_qubits.rs  two_qubits.rs  utils.rs
src/gates/: matrix.rs  mod.rs  parameterized.rs  single_qubit.rs  three_qubit.rs  two_qubit.rs  utils.rs
src/noise/: mod.rs
src/optimization/: ansatz.rs  gradient.rs  mod.rs  observable.rs  optimizer.rs  qng.rs  vqe.rs
src/qml/: data_encoding.rs  mod.rs  qlstm.rs  vqc.rs
src/simulators/: mod.rs  mps.rs
src/states/: backend.rs  mod.rs
src/utils/: mod.rs
src/vis/: circuit.rs  gate.rs  mod.rs  qlstm.rs  state.rs
tests/: integration_tests.rs  test_circuits.rs  test_circuits_cnot.rs  test_circuits_dense.rs  test_circuits_mps.rs  test_circuits_swap.rs  test_circuits_toffoli.rs  test_gates.rs  test_gates_parameterized.rs  test_noise.rs  test_normalize.rs  test_optimization.rs  test_optimization_ansatz.rs  test_optimization_gradient.rs  test_optimization_observables.rs  test_parallel.rs  test_qft.rs  test_qml_qlstm.rs  test_simulators_mps.rs  test_states.rs  unit_tests.rs
