[package]
name = "logosq"
version = "0.1.5"
edition = "2021"
authors = ["Shiwen An <an.s.aa@m.titech.ac.jp>"]
license = "MIT"
keywords = ["QuantumComputing", "QuantumInformation", "VQC", "QML"]
readme = "README.md"
homepage = "https://logosqbook.vercel.app"
description = "This project is a quantum computing library developed in Rust, inspired by existing libraries such as QPP in C++, Yao.jl in Julia, and Pennylane in Python. "

[dependencies]
ndarray = "0.15"  # For numerical operations and state representation
rand = "0.8"      # For random number generation in algorithms
thiserror = "1.0" # For error handling
num-complex = "0.4"  # Add this for complex number support
approx = "0.5.1"
plotters = "0.3.7"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
