[package]
name = "logosq"
version = "0.2.5"
edition = "2021"
authors = ["Shiwen An <an.s.aa@m.titech.ac.jp>"]
license = "MIT"
keywords = ["QuantumComputing", "QuantumInformation", "VQC", "QML"]
readme = "README.md"
homepage = "https://logosqbook.vercel.app"
description = "This project is a quantum computing library developed in Rust, inspired by existing libraries such as QPP in C++, Yao.jl in Julia, and Pennylane in Python. "

[dependencies]
ndarray = { version = "0.15", features = [] }
rand = "0.8"
thiserror = "1.0"
num-complex = "0.4"
approx = "0.5.1"
plotters = "0.3.7"
rustfft = "6.4.1" # or latest compatible version
# Make rayon optional so it can be used in feature flags
rayon = { version = "1.8.0", optional = true }
nalgebra = "0.32"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[features]
default = ["parallel"]
# Enable rayon dependency and ndarray's rayon integration
parallel = ["dep:rayon", "ndarray/rayon"]
